# TaskMaster

./: .replit  README.md  app.py  debug_zapier.py  diagnose_zapier.py  enhanced_salesforce_cli.py  main.py  pyproject.toml  test_command.py  test_search_params.py  test_zapier_simple.py
attached_assets/: Pasted--COPY-PASTE-BLOCK-Full-R-1749088247808.txt  Pasted-Ah-thank-you-for-the-clarification-A-web-interface-is-a-very-different-and-exciting-direction-Thi-1749089904173_1749089904174.txt  Pasted-Hello-Replit-Agent-We-are-implementing-a-new-strategy-for-the-NLU-pre-processing-layer-in-my-Pytho-1749094287844_1749094287845.txt  Pasted-Hello-Replit-Agent-We-have-a-specific-issue-with-our-Python-web-application-s-NLU-pre-processing-l-1749093564191_1749093564192.txt  Pasted-Hello-Replit-Agent-We-need-to-make-a-critical-refinement-to-the-NLU-pre-processing-layer-in-my-Pyt-1749092599830_1749092599831.txt  Pasted-Hello-Replit-I-require-your-assistance-to-create-or-significantly-upgrade-a-Python-application-Th-1749089659902_1749089659903.txt  Pasted-I-want-to-add-an-NLU-Natural-Language-Understanding-pre-processing-step-within-my-Python-backend--1749091449049_1749091449049.txt  Pasted-It-seems-the-core-issue-lies-in-how-your-Python-backend-specifically-the-app-py-script-determine-1749095470921_1749095470921.txt  Pasted-Okay-I-ve-reviewed-your-Python-code-particularly-app-py-and-the-NLU-strategy-you-re-aiming-for--1749095052193_1749095052193.txt  Pasted-Okay-I-ve-reviewed-your-app-py-and-README-md-files-It-s-a-solid-foundation-for-a-Salesforce-AI-ass-1749097365836_1749097365836.txt  (+7 more)
(+3 files in other folders)
